# TheMazeGame

./: .clang-format  .gitignore  CMakeLists.txt  NEA.code-workspace  README.md  imgui.ini
src/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Event.cpp  Event.h  Log.cpp  Log.h  MazeGame.cpp  MessageManager.cpp  MessageManager.h  RandomGen.h  glDebug.h
src/entity/: CMakeLists.txt  Entity.cpp  Entity.h
src/entity/item/: CMakeLists.txt  WorldItem.cpp  WorldItem.h
src/entity/mob/: CMakeLists.txt  Follower.cpp  Follower.h  Followers.h  Mob.cpp  Mob.h  Player.cpp  Player.h
src/entity/movableEntity/: CMakeLists.txt  MovableEntity.cpp  MovableEntity.h
src/entity/movableEntity/mob/: CMakeLists.txt  Enemy.cpp  Enemy.h  Follower.cpp  Follower.h  Mob.cpp  Mob.h  NPC.cpp  NPC.h  Player.cpp  Player.h  StatsMob.cpp  StatsMob.h
src/entity/movableEntity/mob/stats/: CMakeLists.txt  Stats.cpp  Stats.h
src/entity/movableEntity/mob/stats/effect/: Effect.h
src/entity/movableEntity/mob/stats/effects/: Effect.h
src/entity/movableEntity/projectile/: CMakeLists.txt  Projectile.cpp  Projectile.h
src/entity/object/: WorldItem.cpp  WorldItem.h
src/entity/objects/: WorldItem.cpp  WorldItem.h
src/entity/particle/: Particle.cpp  Particle.h
src/entity/spawner/: CMakeLists.txt  ParticleSpawner.cpp  ParticleSpawner.h  Spawner.cpp  Spawner.h
src/event/: CMakeLists.txt  Event.cpp  Event.h
src/event/effect/: ShaderEffect.h
src/event/game/: ChestOpened.h  MazeMoved.h  MobDied.h  PlayerResponse.h  ShowAlternatives.h
src/event/input/: Keyboard.h  Mouse.h
src/event/menu/: ChangeGUIMenu.h  Transfer.h  WindowResize.h
src/gui/: CMakeLists.txt  GUILayer.cpp  GUILayer.h  GUIStack.cpp  GUIStack.h  TextLayer.h
src/gui/object/: Button.cpp  Button.h  CMakeLists.txt  Image.cpp  Image.h  MenuBackgroundObject.cpp  MenuBackgroundObject.h  MenuItemHolderManager.cpp  MenuItemHolderManager.h  MenuObject.cpp  MenuObject.h  Slider.cpp  Slider.h  StatBar.cpp  StatBar.h  Text.cpp  Text.h  TextMenuObject.cpp  TextMenuObject.h  TransferObject.cpp  TransferObject.h
src/gui/objects/: Button.cpp  Button.h  CMakeLists.txt  Image.cpp  Image.h  ItemHolder.cpp  MenuBackgroundObject.cpp  MenuBackgroundObject.h  MenuItemHolderManager.cpp  MenuItemHolderManager.h  MenuObject.cpp  MenuObject.h  StatBar.cpp  StatBar.h  Text.cpp  Text.h  TextMenuObject.cpp  TextMenuObject.h  Title.cpp  Title.h  TransferObject.cpp  TransferObject.h
src/headers/: Core.h  ImGui.h  KeyDefinitions.h  LogHeaders.h  MazeHeaders.h  RoomColours.h
src/item/: CMakeLists.txt  Item.cpp  Item.h
src/item/potion/: CMakeLists.txt  Potion.cpp  Potion.h
src/item/potions/: Potion.cpp  Potion.h
src/item/weapon/: CMakeLists.txt  Weapon.cpp  Weapon.h
src/item/weapon/general/: Boomerang.cpp  Boomerang.h  Bow.cpp  Bow.h  CMakeLists.txt  CrossBow.cpp  Crossbow.h  Sling.cpp  Sling.h
src/item/weapon/staff/: CMakeLists.txt  DarkStaff.cpp  DarkStaff.h  EarthStaff.cpp  EarthStaff.h  FireStaff.cpp  FireStaff.h  FrostStaff.cpp  FrostStaff.h  GoldStaff.cpp  GoldStaff.h
src/item/weapon/staffs/: FireStaff.cpp  FireStaff.h
src/item/weapons/: CMakeLists.txt  Weapon.cpp  Weapon.h
src/item/weapons/general/: Boomerang.cpp  Bow.cpp  CrossBow.cpp  Crossbow.h
src/item/weapons/staffs/: Boomerang.h  Bow.h  CMakeLists.txt  DarkStaff.cpp  DarkStaff.h  EarthStaff.cpp  EarthStaff.h  FireStaff.cpp  FireStaff.h  FrostStaff.cpp  FrostStaff.h  GoldStaff.cpp  GoldStaff.h  Sling.cpp  Sling.h
src/layer/: CMakeLists.txt  GUILayer.cpp  GUILayer.h  GUIStack.cpp  GUIStack.h  Layer.cpp  Layer.h  MessageManager.cpp  MessageManager.h
src/layer/level/: CMakeLists.txt  Level.cpp  Level.h  Maze.cpp  Maze.h
src/layers/: CMakeLists.txt  Layer.cpp  Layer.h  ParticleLayer.cpp  ParticleLayer.h  TextLayer.cpp  TextLayer.h
src/level/: Level.cpp  Level.h  Maze.cpp  Maze.h
src/levels/: CMakeLists.txt  Level.cpp  Level.h  Maze.cpp  Maze.h
src/maze/: CMakeLists.txt  EmptyRoom.cpp  Room.h  Tile.cpp  Tile.h
src/maze/room/: Room.cpp  Room.h
src/maze/rooms/: CMakeLists.txt  EmptyRoom.cpp  EmptyRoom.h  Room.cpp  Room.h
src/maze/tile/: CMakeLists.txt  Chest.cpp  Chest.h  SwitchTile.cpp  SwitchTile.h  Tile.cpp  Tile.h  Trap.cpp  Trap.h  Trapdoor.cpp  Trapdoor.h
src/maze/tiles/: CMakeLists.txt  Chest.cpp  Chest.h  SwitchTile.cpp  SwitchTile.h  Tile.cpp  Tile.h  Trap.cpp  Trap.h  Trapdoor.cpp  Trapdoor.h
src/particle/: CMakeLists.txt
src/particle/particle/: CMakeLists.txt  Particle.cpp  Particle.h
src/particle/spawner/: ParticleSpawner.cpp  ParticleSpawner.h  Spawner.cpp  Spawner.h
src/rendering/: AnimatedSprite.h  Buffer.h  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  RenderEffect.h  RenderObject.cpp  RenderObject.h  RenderVertex.h  Renderer.cpp  Renderer.h  SmartBuffer.cpp  SmartBuffer.h  Sprite.cpp  Sprite.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h
src/rendering/effect/: CMakeLists.txt  Effect.h  ObjectEffect.h  RenderEffect.h  ShaderEffect.cpp  ShaderEffect.h  ShaderEffectCarrier.h  ShaderEffectsManager.cpp  ShaderEffectsManager.h
src/rendering/glInterface/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  glDebug.h
src/rendering/sprite/: AnimatedSprite.cpp  AnimatedSprite.h  Sprite.cpp  Sprite.h  SpritePaths.h
src/rendering/sprites/: AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  Sprite.cpp  Sprite.h  SpritePaths.h
src/rendering/text/: CMakeLists.txt  Text.cpp  Text.h
src/spawner/: CMakeLists.txt  Spawner.cpp  Spawner.h
src/spawner/particle/: CMakeLists.txt  Particle.cpp  Particle.h  ParticleSpawner.cpp  ParticleSpawner.h
src/utils/: 2dVec.h  AStarUtils.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionBox.cpp  CollisionBox.h  Container.h  Direction.cpp  Direction.h  Event.cpp  Event.h  ItemContainer.h  Log.cpp  Log.h  RandomGen.cpp  RandomGen.h  RoomColours.h  ShaderEffectsManager.cpp  ShaderEffectsManager.h  Utils.cpp  Utils.h  WeaponContainer.h
(+45 files in other folders)
